--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=TastyCode
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.main.banner-mode=off
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jvm.args=-XX:+EnableDynamicAgentLoading
+logging.level.org.springframework=ERROR
+logging.level.root=ERROR
